# imgui-Impl

./: .gitignore  CMakeLists.txt  README.md
applications/: CMakeLists.txt
applications/common/: imgui_impl_openglwidget.cpp  imgui_impl_openglwidget.h  imgui_popup_box.h
applications/imgui-openglwidget2/: CMakeLists.txt
applications/imgui-openglwidget2/src/: main.cpp  openglwidget.cpp  openglwidget.h
applications/imgui-openglwidget3/: CMakeLists.txt
applications/imgui-openglwidget3/src/: main.cpp  openglwidget.cpp  openglwidget.h
applications/material-editor/: CMakeLists.txt
applications/material-editor/src/: main.cpp  mainwindow.cpp  mainwindow.h  openglwidget.cpp  openglwidget.h  sceneData.cpp  sceneData.h  sceneImgui.cpp  sceneImgui.h  sceneOpengl.cpp  sceneOpengl.h
applications/opengl/: gl_defines.h  gl_light.cpp  gl_light.h  gl_math.cpp  gl_math.h  gl_mesh.cpp  gl_mesh.h  gl_shader.cpp  gl_shader.h  gl_texture_manager.cpp  gl_texture_manager.h  gl_upload.cpp  gl_upload.h  model_reader.cpp  model_reader.h  obj_reader.cpp  obj_reader.h
applications/opengl/geometry/: geometry_creator.cpp  geometry_creator.h
applications/opengl/image/: Image.cpp  Image.hpp
applications/opengl/model/: model_reader.cpp  obj_reader.cpp  obj_reader.h
applications/renderer/: CMakeLists.txt
applications/renderer-test/: CMakeLists.txt
applications/renderer-test/res/: res.qrc
applications/renderer-test/res/shader/: ambientLight.fs  base.vs  blinnPhong.fs  blinnPhong.vs  depth_map.fs  depth_map.vs  image_color_map.fs  image_map_1.fs  image_map_1.vs  image_map_330.fs  image_map_330.vs  no_mvp.fs  no_mvp.vs  skybox.fs  skybox.vs
applications/renderer-test/src/: assimp_reader.cpp  assimp_reader.h  main.cpp  mainwindow.cpp  mainwindow.h  obj_reader.cpp  obj_reader.h
applications/renderer/backup/: OrbitCamera.h  renderer_widget.h  scene.cpp  shader_pool.h  texture_map.cpp
applications/renderer/include/: camera.h  geometry.h  image_widget.h  light.h  multi_images_widget.h  quad.h  scene.h  shader.h  simular_scene.h  simular_widget.h  sky_box.h  texture_manage.h  texture_map.h
applications/renderer/include/common/: math.h
applications/renderer/include/imgui/: imgui_impl_openglwidget.h
applications/renderer/include/view_controllers/: orbit_view_controller.h  view_controller.h  xy_orbit_view_controller.h
applications/renderer/src/: camera.cpp  geometry.cpp  image_widget.cpp  multi_image_widget.cpp  quad.cpp  renderer_widget.cpp  scene.cpp  shader.cpp  shader_pool.cpp  simular_scene.cpp  simular_widget.cpp  sky_box.cpp  texture_manage.cpp  texture_pool.cpp
applications/renderer/src/common/: math.cpp
applications/renderer/src/imgui/: imgui_impl_openglwidget.cpp
applications/renderer/src/view_controllers/: orbit_view_controller.cpp  view_controller.cpp  xy_orbit_view_controller.cpp
backup/: OrbitCamera.cpp  renderer_widget.cpp  texture_manage.h  texture_pool.h
data/shader/: base.fs  blinnPhong.fs  blinnPhong.vs
